# aegis-boot

./: .gitignore  .typos.toml  AGENTS.md  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.locked  LICENSE-APACHE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.md  THREAT_MODEL.md  deny.toml  flake.nix  release-please-config.json  rust_out
.github/: CODEOWNERS  identity-transition.json.pem  identity-transition.json.sig
.github/ISSUE_TEMPLATE/: hardware-report.yml
.github/workflows/: brew-test.yml  catalog-refresh.yml  catalog-revalidate.yml  ci.yml  crates-publish-dryrun.yml  direct-install-e2e.yml  e2e-suite.yml  fuzz.yml  initramfs.yml  integration.yml  kexec-e2e.yml  linkcheck.yml  mkusb.yml  ovmf-secboot.yml  qemu-smoke.yml  release-please.yml  release.yml  reproducible-build.yml  tui-screenshots.yml  update-rotate-e2e.yml  windows-cargo-check.yml
Formula/: aegis-boot.rb
assets/brand/: BRAND.md
completions/: README.md  _aegis-boot  aegis-boot.bash
crates/aegis-catalog/: Cargo.toml  README.md
crates/aegis-cli/: Cargo.toml  build.rs
crates/aegis-cli/src/: attest.rs  bundle_verify.rs  catalog.rs  cmd_path.rs  compat.rs  completions.rs  constants.rs  direct_install.rs  direct_install_manifest.rs  doctor.rs  fetch.rs  fetch_image.rs  flash.rs  init.rs  init_wizard.rs  inventory.rs  main.rs  man.rs  mounts.rs  plan.rs  readback.rs  update.rs  userfacing.rs  verify.rs  verify_stick.rs
crates/aegis-cli/src/detect/: linux.rs  macos.rs  mod.rs
crates/aegis-cli/src/macos_direct_install/: esp_stage.rs  flash_dispatcher.rs  mod.rs
crates/aegis-cli/src/windows_direct_install/: drive_enumeration.rs  flash_dispatcher.rs  format.rs  mod.rs  partition.rs  pipeline.rs  preflight.rs  raw_write.rs
crates/aegis-cli/tests/fixtures/diskutil/: info-disk4.json  list-external-physical.json
crates/aegis-fetch/: Cargo.toml  README.md
crates/aegis-fetch/src/: download.rs  keyring.rs  lib.rs  sha256.rs  sums.rs  verify.rs
crates/iso-parser/: Cargo.toml  deny.toml
crates/iso-parser/src/: detection_tests.rs  lib.rs
docs/: ARCHITECTURE.md  CATALOG_POLICY.md  CLI.md  HARDWARE_COMPAT.md  HOW_IT_WORKS.md  INSTALL.md  LOCAL_TESTING.md  README.md  TROUBLESHOOTING.md  USB_LAYOUT.md  attestation-manifest.md
man/: aegis-boot.1
scripts/: README.md  build-initramfs.sh  catalog-revalidate.sh  check-doc-version.sh  crates-io-preregister.sh  dev-test.sh  install.sh  mkusb.sh  org-migration-sweep.sh  ovmf-secboot-e2e.sh  ovmf-secboot-smoke.sh  publish-if-new.sh  qemu-kexec-e2e.sh  qemu-loaded-stick.sh  qemu-smoke.sh  scaffold-aegis-boot.sh
tools/: local-ci.sh
winget-manifests/: README.md
(+52 files in other folders)
