[package]
name = "aegis-cli"
version = "0.13.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Operator CLI for aegis-boot — flash, add, list, verify"

[[bin]]
name = "aegis-boot"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
iso-probe = { path = "../iso-probe" }
# Atomic random-name temp files for write_sidecar_via_sudo's
# stage-then-copy path. Use the runtime dep (not the dev-dep) so the
# staging path is not predictable — closes the TOCTOU window semgrep
# rust.lang.security.temp-dir flagged on the previous PID-based name.
tempfile = "3.14"
# sha2 + hex are already transitive deps via iso-probe; surfaced
# directly here for the post-write readback verifier (#244 PR1).
sha2 = "0.10"
hex = "0.4"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
