[package]
name = "aegis-fetch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTPS download + signed-chain verification for aegis-boot catalog ISOs (#655 Phase 2B). Shared by the host CLI and the rescue-tui in-rescue fetch path."
readme = "README.md"

include = ["src/**/*", "README.md", "Cargo.toml"]

[lib]

[dependencies]
aegis-catalog = { path = "../aegis-catalog" }
thiserror = { workspace = true }

# HTTPS via rustls + ring. default-features = false drops gzip
# decompression we don't need for ISO downloads (vendors serve
# binary content uncompressed).
ureq = { version = "3.3", default-features = false, features = ["rustls"] }

# Pure-Rust OpenPGP impl. MIT OR Apache-2.0 — fits the workspace
# outbound dual license without LGPL static-linking obligations.
# See project_aegis_fetch_design_decisions for why this is rpgp
# rather than sequoia-openpgp.
pgp = "0.19"

# SHA-256 for the sha256_url verification step. MIT OR Apache-2.0.
sha2 = "0.10"

[dev-dependencies]
# Hermetic fixture I/O for the verify-path tests.
tempfile = "3.14"

[lints]
workspace = true
