[package]
name = "iso-parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[features]
default = ["std"]
std = []

[dependencies]
thiserror = { version = "2.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.14"
similar-asserts = "1.5"
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1.0"